--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 	      <ul class="right hide-on-med-and-down">
 	        <li><a href="#sobre-mi">SOBRE MI</a></li>
-	        <li><a href="#">HERRAMIENTAS</a></li>
+	        <li><a href="#herramientas">HERRAMIENTAS</a></li>
 	        <li><a href="#">PORTAFOLIO</a></li>
 	        <li><a href="#">CONTÁCTAME</a></li>
 	      </ul>
@@ -30,23 +30,61 @@
   </header>
   <section>
   	<article>
-  		<div class="heading">
+  		<div class="heading center valign-wrapper">
   			<div>
-  				<h1> "Programar es solo una chispa de nuestra creatividad"</h1>
+  				<h1 class="center flow-text">"Programar es solo una chispa de nuestra creatividad"</h1>
+  				<h3 class="right-align flow-text">Anabel Espinal Cruz, front end developer.</h3>
   			</div>
    		</div>
   	</article>
+	  <article id="sobre-mi">
+	    <div class="container section center">
+	      <h3 class="flow-text">SOBRE MI</h3>
+	      <div class="divider"></div>
+	      <div class="row">
+			    <div class="col s12 m12 l5">
+			    	<div>
+			    		<img src="imgs/perfil.png" alt="perfil" class="circle responsive-img">
+			    	</div>
+			    </div>
+			    <div class="col s12 m12 l7" style="word-wrap: break-word;">
+			    	<p class="black-text">
+        		  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus itaque corporis, animi suscipit fuga sapiente hic sint voluptatibus placeat. Assumenda voluptatibus, fugit ducimus cumque est nemo sapiente eius nostrum sequi.
+            </p>
+            <p>
+            	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet odit, nostrum cumque architecto nemo soluta quia magnam voluptas rem impedit consectetur nisi nulla ab ipsum dolorum aspernatur necessitatibus corporis eaque?
+            </p>
+			    </div>
+	      </div>
+	      <div class="divider"></div>
+	      <div class="row">
+			    <div class="col s12 m12 l7">
+			    	<p class="black-text">
+        		  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus itaque corporis, animi suscipit fuga sapiente hic sint voluptatibus placeat. Assumenda voluptatibus, fugit ducimus cumque est nemo sapiente eius nostrum sequi.
+            </p>
+            <p>
+            	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet odit, nostrum cumque architecto nemo soluta quia magnam voluptas rem impedit consectetur nisi nulla ab ipsum dolorum aspernatur necessitatibus corporis eaque?
+            </p>
+			    </div>
+			    <div class="col s12 m12 l5">
+			    	<div>
+			    		<img src="imgs/coder.png" alt="coder" class="circle responsive-img">
+			    	</div>
+			    </div>
+	      </div>
+	    </div>
+	  </article>
 	  <article>
-		  <div class="section white">
-		    <div class="row container">
-		      <h3 class="header">SOBRE MI</h3>
-		      <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
-		    </div>
+		  <div class="parallax-container">
+		    <div class="parallax"><img src="imgs/frase-3.png"></div>
 		  </div>
 	  </article>
-	  <div class="parallax-container">
-	    <div class="parallax"><img src="imgs/frase-2.png"></div>
-	  </div>
+	  <article id="herramientas">
+	  	<div class="container section center">
+		  	<h3 class="flow-text">HERRAMIENTAS</h3>
+		    <div class="divider"></div>
+		  </div>
+	  </article>
   </section>
 
 
