--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 	      <ul class="right hide-on-med-and-down">
 	        <li><a href="#sobre-mi">SOBRE MI</a></li>
-	        <li><a href="#herramientas">HERRAMIENTAS</a></li>
+	        <li><a href="#herramientas">HABILIDADES</a></li>
 	        <li><a href="#">PORTAFOLIO</a></li>
 	        <li><a href="#">CONTÁCTAME</a></li>
 	      </ul>
@@ -42,12 +42,12 @@
 	      <h3 class="flow-text">SOBRE MI</h3>
 	      <div class="divider"></div>
 	      <div class="row">
-			    <div class="col s12 m12 l5">
+			    <div class="col s12 m3 l5">
 			    	<div>
 			    		<img src="imgs/perfil.png" alt="perfil" class="circle responsive-img">
 			    	</div>
 			    </div>
-			    <div class="col s12 m12 l7" style="word-wrap: break-word;">
+			    <div class="col s12 m9 l7" style="word-wrap: break-word;">
 			    	<p class="black-text">
         		  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus itaque corporis, animi suscipit fuga sapiente hic sint voluptatibus placeat. Assumenda voluptatibus, fugit ducimus cumque est nemo sapiente eius nostrum sequi.
             </p>
@@ -58,7 +58,7 @@
 	      </div>
 	      <div class="divider"></div>
 	      <div class="row">
-			    <div class="col s12 m12 l7">
+			    <div class="col s12 m9 l7">
 			    	<p class="black-text">
         		  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus itaque corporis, animi suscipit fuga sapiente hic sint voluptatibus placeat. Assumenda voluptatibus, fugit ducimus cumque est nemo sapiente eius nostrum sequi.
             </p>
@@ -66,7 +66,7 @@
             	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet odit, nostrum cumque architecto nemo soluta quia magnam voluptas rem impedit consectetur nisi nulla ab ipsum dolorum aspernatur necessitatibus corporis eaque?
             </p>
 			    </div>
-			    <div class="col s12 m12 l5">
+			    <div class="col s12 m3 l5">
 			    	<div>
 			    		<img src="imgs/coder.png" alt="coder" class="circle responsive-img">
 			    	</div>
@@ -81,11 +81,67 @@
 	  </article>
 	  <article id="herramientas">
 	  	<div class="container section center">
-		  	<h3 class="flow-text">HERRAMIENTAS</h3>
+		  	<h3 class="flow-text">HABILIDADES</h3>
 		    <div class="divider"></div>
+		    <div class="row">
+		    	<div class="col s4 habilidades">
+		    		<div class="hover">
+		    			<img src="imgs/html.png" class="responsive-img">
+		    		</div>
+		    	</div>
+		    	<div class="col s4 habilidades">
+		    		<div class="hover">
+		    			<img src="imgs/css.png" class="responsive-img">
+		    		</div>
+		    	</div>
+		    	<div class="col s4 habilidades">
+		    		<div class="hover">
+		    			<img src="imgs/js.png" class="responsive-img">
+		    		</div>
+		    	</div>
+		    </div>
+		    <div class="row">
+		    	<div class="col s6 framework">
+		    		<div class="hover">
+		    			<img src="imgs/b.png" class="responsive-img">
+		    		</div>
+		    	</div>
+		    	<div class="col s6 framework">
+		    		<div class="hover">
+		    			<img src="imgs/m.png" class="responsive-img">
+		    		</div>
+		    	</div>
 		  </div>
 	  </article>
   </section>
+  <footer>
+		<div class="container center">
+			<div class="row">
+				<div class="col s12 m6 l3">
+					<div>
+						<img src="imgs/in.png" alt="link" class="responsive-img">
+					</div>
+				</div>
+				<div class="col s12 m6 l3">
+					<div>
+						<img src="imgs/cel.png" alt="cel" class="responsive-img">
+					</div>
+				</div>
+				<div class="col s12 m6 l3">
+					<div>
+						<img src="imgs/github.png" alt="github" class="responsive-img">
+					</div>
+				</div>
+				<div class="col s12 m6 l3">
+				</div>
+				<div class="col s12 m6 l3">
+					<div>
+						<img src="imgs/slack.png" alt="slack" class="responsive-img">
+					</div>
+				</div>
+			</div>
+		</div>
+  </footer>
 
 
 	<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
