--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<title>anabel espinal</title>
+	<meta charset="utf-8">
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans+Condensed:300" rel="stylesheet">
-  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Titillium+Web|Rajdhani" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="stylesheet" type="text/css" href="css/animate.css">
@@ -23,7 +23,7 @@
 	        <li><a href="#sobre-mi">SOBRE MI</a></li>
 	        <li><a href="#herramientas">HABILIDADES</a></li>
 	        <li><a href="#">PORTAFOLIO</a></li>
-	        <li><a href="#">CONTÁCTAME</a></li>
+	        <li><a href="#contacto">CONTÁCTAME</a></li>
 	      </ul>
 	    </div>
 	  </nav>
@@ -32,7 +32,10 @@
   	<article>
   		<div class="heading center valign-wrapper">
   			<div>
-  				<h1 class="center flow-text">"Programar es solo una chispa de nuestra creatividad"</h1>
+  				<h1 class="center flow-text">"Programar es sólo una chispa de nuestra imaginación"</h1>
+  				<h1 class="center flow-text">"Programar es como dibujar, sólo enciende tu creatividad y hazla volar lejos."</h1>
+  				<h1 class="center flow-text">"Nuestro código sólo es una parte de lo que queremos demostar."</h1>
+  				<h1 class="center flow-text">"Detrás de toda página web, hay un programador inspirado."</h1>
   				<h3 class="right-align flow-text">Anabel Espinal Cruz, front end developer.</h3>
   			</div>
    		</div>
@@ -43,33 +46,36 @@
 	      <div class="divider"></div>
 	      <div class="row">
 			    <div class="col s12 m3 l5">
-			    	<div>
+			    	<div class="jj circle">
 			    		<img src="imgs/perfil.png" alt="perfil" class="circle responsive-img">
 			    	</div>
 			    </div>
-			    <div class="col s12 m9 l7" style="word-wrap: break-word;">
-			    	<p class="black-text">
-        		  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus itaque corporis, animi suscipit fuga sapiente hic sint voluptatibus placeat. Assumenda voluptatibus, fugit ducimus cumque est nemo sapiente eius nostrum sequi.
+			    <div class="col s12 m9 l7">
+			    	<h5 class="left-align">Mortal</h5>
+			    	<p class="black-text left-align">
+        			Hola, soy Anabel.
             </p>
-            <p>
-            	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet odit, nostrum cumque architecto nemo soluta quia magnam voluptas rem impedit consectetur nisi nulla ab ipsum dolorum aspernatur necessitatibus corporis eaque?
+            <p class="black-text">
+        			Me considero una persona que le encanta estar al aire libre, me gusta leer libros de aventuras y ficción. A mis 19 años me considero una joven en busca de aprender más, creo que todos los días se aprende algo nuevo, y eso me encanta.
             </p>
 			    </div>
 	      </div>
 	      <div class="divider"></div>
 	      <div class="row">
-			    <div class="col s12 m9 l7">
-			    	<p class="black-text">
-        		  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus itaque corporis, animi suscipit fuga sapiente hic sint voluptatibus placeat. Assumenda voluptatibus, fugit ducimus cumque est nemo sapiente eius nostrum sequi.
-            </p>
-            <p>
-            	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet odit, nostrum cumque architecto nemo soluta quia magnam voluptas rem impedit consectetur nisi nulla ab ipsum dolorum aspernatur necessitatibus corporis eaque?
-            </p>
-			    </div>
 			    <div class="col s12 m3 l5">
 			    	<div>
 			    		<img src="imgs/coder.png" alt="coder" class="circle responsive-img">
 			    	</div>
+			    </div>
+			    <div class="col s12 m9 l7">
+			    	<h5 class="left-align">Coder</h5>
+			    	<p class="black-text left-align">
+        		  Hola, soy una coder.
+            </p>
+            <p class="black-text">
+            	El mundo de la programación web me ha eneñado que no hay límites es lo que uno cree y sueña.
+            	Soy una coder en busca de más. Tálvez programar suena como algo difícil, támbien lo he pensado, pero es como aprender a escribir en papel, si fallas lo importante  es borrarlo rápido y segiur aprendiendo.
+            </p>
 			    </div>
 	      </div>
 	    </div>
@@ -84,29 +90,29 @@
 		  	<h3 class="flow-text">HABILIDADES</h3>
 		    <div class="divider"></div>
 		    <div class="row">
-		    	<div class="col s4 habilidades">
+		    	<div class="col s12 m4 habilidades">
 		    		<div class="hover">
 		    			<img src="imgs/html.png" class="responsive-img">
 		    		</div>
 		    	</div>
-		    	<div class="col s4 habilidades">
+		    	<div class="col s12 m4 habilidades">
 		    		<div class="hover">
 		    			<img src="imgs/css.png" class="responsive-img">
 		    		</div>
 		    	</div>
-		    	<div class="col s4 habilidades">
+		    	<div class="col s12 m4 habilidades">
 		    		<div class="hover">
 		    			<img src="imgs/js.png" class="responsive-img">
 		    		</div>
 		    	</div>
 		    </div>
 		    <div class="row">
-		    	<div class="col s6 framework">
+		    	<div class="col s12 m6 framework">
 		    		<div class="hover">
 		    			<img src="imgs/b.png" class="responsive-img">
 		    		</div>
 		    	</div>
-		    	<div class="col s6 framework">
+		    	<div class="col s12 m6 framework">
 		    		<div class="hover">
 		    			<img src="imgs/m.png" class="responsive-img">
 		    		</div>
@@ -114,7 +120,7 @@
 		  </div>
 	  </article>
   </section>
-  <footer>
+  <footer id="contacto">
 		<div class="container center">
 			<div class="row">
 				<div class="col s12 m6 l3">
@@ -142,7 +148,9 @@
 			</div>
 		</div>
   </footer>
-
+	<span id="boton-subir" class="hiden">
+		<i class="material-icons">navigation</i>
+	</span>
 
 	<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="js/materialize.js"></script>
