--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
   		<div class="heading center valign-wrapper">
   			<div>
   				<h1 class="center flow-text">"Programar es sólo una chispa de nuestra imaginación"</h1>
-  				<h1 class="center flow-text">"Programar es como dibujar, sólo enciende tu creatividad y hazla volar lejos."</h1>
-  				<h1 class="center flow-text">"Nuestro código sólo es una parte de lo que queremos demostar."</h1>
+  				<h1 class="center flow-text">"Programar es un dibujo donde tu creatividad vuela lejos."</h1>
+  				<h1 class="center flow-text">"Nuestro código sólo es una parte de lo que queremos demostrar."</h1>
   				<h1 class="center flow-text">"Detrás de toda página web, hay un programador inspirado."</h1>
   				<h3 class="right-align flow-text">Anabel Espinal Cruz, front end developer.</h3>
+			  	<button type="button"><a href="#">LinkedIn</a></button>
+			  	<button type="button"><a href="#">Curriculum Vitae</a></button>
   			</div>
    		</div>
   	</article>
@@ -125,24 +127,32 @@
 			<div class="row">
 				<div class="col s12 m6 l3">
 					<div>
+					<a href="#">
 						<img src="imgs/in.png" alt="link" class="responsive-img">
+					</a>
 					</div>
 				</div>
 				<div class="col s12 m6 l3">
 					<div>
-						<img src="imgs/cel.png" alt="cel" class="responsive-img">
+						<a href="#">
+							<img src="imgs/cel.png" alt="cel" class="responsive-img">
+						</a>
+						<div>966796093</div>
 					</div>
 				</div>
 				<div class="col s12 m6 l3">
 					<div>
-						<img src="imgs/github.png" alt="github" class="responsive-img">
+						<a href="https://github.com/anabelespinal" target="_blank">
+							<img src="imgs/github.png" alt="github" class="responsive-img">
+						</a>
 					</div>
 				</div>
 				<div class="col s12 m6 l3">
 				</div>
 				<div class="col s12 m6 l3">
 					<div>
-						<img src="imgs/slack.png" alt="slack" class="responsive-img">
+						<img src="imgs/gmail.png" alt="gmail" class="responsive-img">
+						<div>yorlanaespinal@gmail.com</div>
 					</div>
 				</div>
 			</div>
