--- a/index.html
+++ b/index.html
@@ -13,22 +13,23 @@
 <body>
 	<header>
 		<ul id="slide-out" class="side-nav">
-		  <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+		  <li><a class="waves-effect" href="portafolio.html" target="_blank">Third Link With Waves</a></li>
 		</ul>
 	  <nav>
 	    <div class="nav-wrapper">
 	      <img src="imgs/logo.png" class="brand-logo">
 				<a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 	      <ul class="right hide-on-med-and-down">
+	      	<!-- <li><a href="index.html">INICIO</a></li> -->
 	        <li><a href="#sobre-mi">SOBRE MI</a></li>
 	        <li><a href="#herramientas">HABILIDADES</a></li>
-	        <li><a href="#">PORTAFOLIO</a></li>
+	        <li><a href="portafolio.html" target="_blank">PORTAFOLIO</a></li>
 	        <li><a href="#contacto">CONTÁCTAME</a></li>
 	      </ul>
 	    </div>
 	  </nav>
   </header>
-  <section>
+  <section id="section">
   	<article>
   		<div class="heading center valign-wrapper">
   			<div>
@@ -93,30 +94,45 @@
 		    <div class="divider"></div>
 		    <div class="row">
 		    	<div class="col s12 m4 habilidades">
-		    		<div class="hover">
-		    			<img src="imgs/html.png" class="responsive-img">
+		    		<div class="hover html">
+		    			<!-- <img src="imgs/html.png" class="responsive-img"> -->
+		    			<div>
+		    				<h5 class="">html</h5>
+		    			</div>
 		    		</div>
 		    	</div>
 		    	<div class="col s12 m4 habilidades">
-		    		<div class="hover">
-		    			<img src="imgs/css.png" class="responsive-img">
+		    		<div class="hover css">
+		    			<!-- <img src="imgs/css.png" class="responsive-img"> -->
+		    			<div>
+		    				<h5>html</h5>
+		    			</div>
 		    		</div>
 		    	</div>
 		    	<div class="col s12 m4 habilidades">
-		    		<div class="hover">
-		    			<img src="imgs/js.png" class="responsive-img">
+		    		<div class="hover js">
+		    			<!-- <img src="imgs/js.png" class="responsive-img"> -->
+		    			<div>
+		    				<h5>html</h5>
+		    			</div>
 		    		</div>
 		    	</div>
 		    </div>
 		    <div class="row">
 		    	<div class="col s12 m6 framework">
-		    		<div class="hover">
-		    			<img src="imgs/b.png" class="responsive-img">
+		    		<div class="hover b">
+		    			<!-- <img src="imgs/b.png" class="responsive-img"> -->
+		    			<div>
+		    				<h5>html</h5>
+		    			</div>
 		    		</div>
 		    	</div>
 		    	<div class="col s12 m6 framework">
-		    		<div class="hover">
-		    			<img src="imgs/m.png" class="responsive-img">
+		    		<div class="hover m">
+		    			<!-- <img src="imgs/m.png" class="responsive-img"> -->
+		    			<div>
+		    				<h5>html</h5>
+		    			</div>
 		    		</div>
 		    	</div>
 		  </div>
