--- a/portafolio.html
+++ b/portafolio.html
@@ -13,7 +13,21 @@
 <body>
 	<header>
 		<ul id="slide-out" class="side-nav">
-		  <li><a class="waves-effect" href="index.html">Third Link With Waves</a></li>
+			<div class="container">
+				<div class="row">
+					<div class="col s12">
+						<div>
+							<img src="imgs/perfil.png" alt="imganen-menu" class="circle">
+						</div>
+					</div>
+				</div>
+			</div>
+		  <li>
+		  	<a class="waves-effect center" href="index.html">INICIO</a>
+	  	</li>
+	  	<li>
+		  	<a class="waves-effect center" href="#contacto">CONTÁCTAME</a>
+	  	</li>
 		</ul>
 	  <nav>
 	    <div class="nav-wrapper">
