--- a/index.html
+++ b/index.html
@@ -13,7 +13,27 @@
 <body>
 	<header>
 		<ul id="slide-out" class="side-nav">
-		  <li><a class="waves-effect" href="portafolio.html" target="_blank">Third Link With Waves</a></li>
+			<div class="container">
+				<div class="row">
+					<div class="col s12">
+						<div>
+							<img src="imgs/perfil.png" alt="imganen-menu" class="circle">
+						</div>
+					</div>
+				</div>
+			</div>
+		  <li>
+		  	<a class="waves-effect center" href="#sobre-mi">SOBRE MI</a>
+	  	</li>
+		  <li>
+		  	<a class="waves-effect center" href="#herramientas">HABILIDADES</a>
+	  	</li>
+		  <li>
+		  	<a class="waves-effect center" href="portafolio.html" target="_blank">PORTAFOLIO</a>
+	  	</li>
+	  	<li>
+		  	<a class="waves-effect center" href="#contacto">CONTÁCTAME</a>
+	  	</li>
 		</ul>
 	  <nav>
 	    <div class="nav-wrapper">
@@ -97,7 +117,7 @@
 		    		<div class="hover html">
 		    			<!-- <img src="imgs/html.png" class="responsive-img"> -->
 		    			<div>
-		    				<h5 class="">html</h5>
+		    				<h5>HTML</h5>
 		    			</div>
 		    		</div>
 		    	</div>
@@ -105,7 +125,7 @@
 		    		<div class="hover css">
 		    			<!-- <img src="imgs/css.png" class="responsive-img"> -->
 		    			<div>
-		    				<h5>html</h5>
+		    				<h5>CSS</h5>
 		    			</div>
 		    		</div>
 		    	</div>
@@ -113,7 +133,7 @@
 		    		<div class="hover js">
 		    			<!-- <img src="imgs/js.png" class="responsive-img"> -->
 		    			<div>
-		    				<h5>html</h5>
+		    				<h5>JAVA<br>SCRIPT</h5>
 		    			</div>
 		    		</div>
 		    	</div>
@@ -123,7 +143,7 @@
 		    		<div class="hover b">
 		    			<!-- <img src="imgs/b.png" class="responsive-img"> -->
 		    			<div>
-		    				<h5>html</h5>
+		    				<h5>BOOTSTRAP</h5>
 		    			</div>
 		    		</div>
 		    	</div>
@@ -131,7 +151,7 @@
 		    		<div class="hover m">
 		    			<!-- <img src="imgs/m.png" class="responsive-img"> -->
 		    			<div>
-		    				<h5>html</h5>
+		    				<h5>MATERIALIZE</h5>
 		    			</div>
 		    		</div>
 		    	</div>
