--- a/portafolio.html
+++ b/portafolio.html
@@ -35,9 +35,6 @@
 				<a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 	      <ul class="right hide-on-med-and-down">
 	      	<li><a href="index.html">INICIO</a></li>
-	        <li><a href="#sobre-mi">SOBRE MI</a></li>
-	        <li><a href="#herramientas">HABILIDADES</a></li>
-	        <li><a href="portafolio.html" target="_blank">PORTAFOLIO</a></li>
 	        <li><a href="#contacto">CONTÁCTAME</a></li>
 	      </ul>
 	    </div>
@@ -102,7 +99,7 @@
 				<div class="row">
 					<div class="col s12">
 						<h2 class="flow-text">SI QUIERES CONOCER MÁS PROYECTOS VISITA MI GITHUB</h2>
-						<a href="#">GIT HUB</a>
+						<a href="https://github.com/anabelespinal?tab=repositories" target="_blank">GIT HUB</a>
 					</div>
 				</div>
 		  </div>
@@ -120,9 +117,7 @@
 				</div>
 				<div class="col s12 m6 l3">
 					<div>
-						<a href="#">
-							<img src="imgs/cel.png" alt="cel" class="responsive-img">
-						</a>
+						<img src="imgs/cel.png" alt="cel" class="responsive-img">
 						<div>966796093</div>
 					</div>
 				</div>
