eliminando portafolio.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		  	<a class="waves-effect center" href="#herramientas">HABILIDADES</a>
 	  	</li>
 		  <li>
-		  	<a class="waves-effect center" href="portafolio.html" target="_blank">PORTAFOLIO</a>
+		  	<a class="waves-effect center" href="#portafolio" target="_blank">PORTAFOLIO</a>
 	  	</li>
 	  	<li>
 		  	<a class="waves-effect center" href="#contacto">CONTÁCTAME</a>
@@ -42,7 +42,7 @@
 	      <ul class="right hide-on-med-and-down">
 	        <li><a href="#sobre-mi">SOBRE MI</a></li>
 	        <li><a href="#herramientas">HABILIDADES</a></li>
-	        <li><a href="portafolio.html" target="_blank">PORTAFOLIO</a></li>
+	        <li><a href="#portafolio">PORTAFOLIO</a></li>
 	        <li><a href="#contacto">CONTÁCTAME</a></li>
 	      </ul>
 	    </div>
@@ -151,6 +151,57 @@
 		    	</div>
 		  </div>
 	  </article>
+	  <article>
+		  <div class="parallax-container">
+		    <div class="parallax"><img src="imgs/frase-3.png"></div>
+		  </div>
+	  </article>
+		<article id="portafolio">
+  		<div class="container center">
+  			<h3 class="flow-text">PORTAFOLIO</h3>
+	      <div class="divider"></div>
+  			<div class="row">
+  				<div class="col s12 m6 l6">
+  					<div class="uno portafolio">
+  						<div>
+  							<a href="https://anabelespinal.github.io/portafolio/" target="_blank">DEMO</a>
+  							<br>
+  							<a href="https://github.com/anabelespinal/portafolio" target="_blank">GIT HUB</a>
+  						</div>
+  					</div>
+  				</div>
+  				<div class="col s12 m6 l6">
+  					<div class="uno twitter">
+  						<div>
+  							<a href="https://anabelespinal.github.io/twitter/" target="_blank">DEMO</a>
+  							<br>
+  							<a href="https://github.com/anabelespinal/twitter" target="_blank">GIT HUB</a>
+  						</div>
+  					</div>
+  				</div>
+  			</div>
+  			<div class="row">
+  				<div class="col s12 m6 l6">
+  					<div class="uno tumblr">
+  						<div>
+  							<a href="https://anabelespinal.github.io/tumblr/" target="_blank">DEMO</a>
+  							<br>
+  							<a href="https://github.com/anabelespinal/tumblr" target="_blank">GIT HUB</a>
+  						</div>
+  					</div>
+  				</div>
+  				<div class="col s12 m6 l6">
+  					<div class="uno trello">
+  						<div>
+  							<a href="https://anabelespinal.github.io/trello/" target="_blank">DEMO</a>
+  							<br>
+  							<a href="https://github.com/anabelespinal/trello" target="_blank">GIT HUB</a>
+  						</div>
+  					</div>
+  				</div>
+  			</div>
+  		</div>
+  	</article>
   </section>
   <footer id="contacto">
 		<div class="container center">
