--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>anabel espinal</title>
 	<meta charset="utf-8">
-  <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Titillium+Web|Rajdhani" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -29,7 +29,7 @@
 		  	<a class="waves-effect center" href="#herramientas">HABILIDADES</a>
 	  	</li>
 		  <li>
-		  	<a class="waves-effect center" href="#portafolio" target="_blank">PORTAFOLIO</a>
+		  	<a class="waves-effect center" href="#portafolio">PORTAFOLIO</a>
 	  	</li>
 	  	<li>
 		  	<a class="waves-effect center" href="#contacto">CONTÁCTAME</a>
@@ -113,22 +113,22 @@
 		    <div class="divider"></div>
 		    <div class="row">
 		    	<div class="col s12 m4 habilidades">
-		    		<div class="hover html">
-		    			<div>
+		    		<div class="hover html circle">
+		    			<div class="circle">
 		    				<h5>HTML</h5>
 		    			</div>
 		    		</div>
 		    	</div>
 		    	<div class="col s12 m4 habilidades">
-		    		<div class="hover css">
-		    			<div>
+		    		<div class="hover css circle">
+		    			<div class="circle">
 		    				<h5>CSS</h5>
 		    			</div>
 		    		</div>
 		    	</div>
 		    	<div class="col s12 m4 habilidades">
-		    		<div class="hover js">
-		    			<div>
+		    		<div class="hover js circle">
+		    			<div class="circle">
 		    				<h5>JAVA<br>SCRIPT</h5>
 		    			</div>
 		    		</div>
@@ -136,15 +136,15 @@
 		    </div>
 		    <div class="row">
 		    	<div class="col s12 m6 framework">
-		    		<div class="hover b">
-		    			<div>
+		    		<div class="hover b circle">
+		    			<div class="circle">
 		    				<h5>BOOTSTRAP</h5>
 		    			</div>
 		    		</div>
 		    	</div>
 		    	<div class="col s12 m6 framework">
-		    		<div class="hover m">
-		    			<div>
+		    		<div class="hover m circle">
+		    			<div class="circle">
 		    				<h5>MATERIALIZE</h5>
 		    			</div>
 		    		</div>
@@ -202,6 +202,16 @@
   			</div>
   		</div>
   	</article>
+  	<article>
+   		<div class="container center">
+ 				<div class="row">
+ 					<div class="col s12">
+ 						<h2 class="flow-text">SI QUIERES CONOCER MÁS PROYECTOS VISITA MI GITHUB</h2>
+ 						<a href="#">GIT HUB</a>
+ 					</div>
+ 				</div> 
+ 		  </div>
+   	</article>
   </section>
   <footer id="contacto">
 		<div class="container center">
