--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				</div>
 			</div>
 		  <li>
-		  	<a class="waves-effect center" href="#sobre-mi">SOBRE MI</a>
+		  	<a class="waves-effect center" href="#sobre-mi" id="enlace-sobre-mi">SOBRE MI</a>
 	  	</li>
 		  <li>
 		  	<a class="waves-effect center" href="#herramientas">HABILIDADES</a>
@@ -162,42 +162,101 @@
 	      <div class="divider"></div>
   			<div class="row">
   				<div class="col s12 m6 l6">
-  					<div class="uno portafolio">
+<!--   					<div class="uno portafolio">
   						<div>
   							<a href="https://anabelespinal.github.io/portafolio/" target="_blank">DEMO</a>
   							<br>
   							<a href="https://github.com/anabelespinal/portafolio" target="_blank">GIT HUB</a>
   						</div>
-  					</div>
+  					</div> -->
+  					<div class="wrapper">
+						  <ul class="stage">
+								<li class="scene">
+							  <div class="movie">
+							    <div class="poster"></div>
+							    <div class="info">
+							      <header>
+							        <h1>It's a Wonderful Life</h1>
+							        <span class="year">1946</span>
+							        <span class="rating">PG</span>
+							        <span class="duration">130 minutes</span>
+							      </header>
+							      <p>
+							        In Bedford Falls, New York on Christmas Eve, George Bailey is deeply troubled. Prayers for his well-being from friends and family reach Heaven. Clarence Odbody, Angel Second Class, is assigned to visit Earth to save George, thereby earning his wings. Franklin and Joseph, the head angels, review George's life with Clarence.
+							      </p>
+							    </div>
+							  </div>
+							</li>
+						  </ul> 
+						</div>
   				</div>
   				<div class="col s12 m6 l6">
-  					<div class="uno twitter">
-  						<div>
-  							<a href="https://anabelespinal.github.io/twitter/" target="_blank">DEMO</a>
-  							<br>
-  							<a href="https://github.com/anabelespinal/twitter" target="_blank">GIT HUB</a>
-  						</div>
-  					</div>
+  					  					<div class="wrapper">
+						  <ul class="stage">
+								<li class="scene">
+							  <div class="movie">
+							    <div class="poster"></div>
+							    <div class="info">
+							      <header>
+							        <h1>It's a Wonderful Life</h1>
+							        <span class="year">1946</span>
+							        <span class="rating">PG</span>
+							        <span class="duration">130 minutes</span>
+							      </header>
+							      <p>
+							        In Bedford Falls, New York on Christmas Eve, George Bailey is deeply troubled. Prayers for his well-being from friends and family reach Heaven. Clarence Odbody, Angel Second Class, is assigned to visit Earth to save George, thereby earning his wings. Franklin and Joseph, the head angels, review George's life with Clarence.
+							      </p>
+							    </div>
+							  </div>
+							</li>
+						  </ul> 
+						</div>
   				</div>
   			</div>
   			<div class="row">
   				<div class="col s12 m6 l6">
-  					<div class="uno tumblr">
-  						<div>
-  							<a href="https://anabelespinal.github.io/tumblr/" target="_blank">DEMO</a>
-  							<br>
-  							<a href="https://github.com/anabelespinal/tumblr" target="_blank">GIT HUB</a>
-  						</div>
-  					</div>
+  					  					<div class="wrapper">
+						  <ul class="stage">
+								<li class="scene">
+							  <div class="movie">
+							    <div class="poster"></div>
+							    <div class="info">
+							      <header>
+							        <h1>It's a Wonderful Life</h1>
+							        <span class="year">1946</span>
+							        <span class="rating">PG</span>
+							        <span class="duration">130 minutes</span>
+							      </header>
+							      <p>
+							        In Bedford Falls, New York on Christmas Eve, George Bailey is deeply troubled. Prayers for his well-being from friends and family reach Heaven. Clarence Odbody, Angel Second Class, is assigned to visit Earth to save George, thereby earning his wings. Franklin and Joseph, the head angels, review George's life with Clarence.
+							      </p>
+							    </div>
+							  </div>
+							</li>
+						  </ul> 
+						</div>
   				</div>
   				<div class="col s12 m6 l6">
-  					<div class="uno trello">
-  						<div>
-  							<a href="https://anabelespinal.github.io/trello/" target="_blank">DEMO</a>
-  							<br>
-  							<a href="https://github.com/anabelespinal/trello" target="_blank">GIT HUB</a>
-  						</div>
-  					</div>
+  					  					<div class="wrapper">
+						  <ul class="stage">
+								<li class="scene">
+							  <div class="movie">
+							    <div class="poster"></div>
+							    <div class="info">
+							      <header>
+							        <h1>It's a Wonderful Life</h1>
+							        <span class="year">1946</span>
+							        <span class="rating">PG</span>
+							        <span class="duration">130 minutes</span>
+							      </header>
+							      <p>
+							        In Bedford Falls, New York on Christmas Eve, George Bailey is deeply troubled. Prayers for his well-being from friends and family reach Heaven. Clarence Odbody, Angel Second Class, is assigned to visit Earth to save George, thereby earning his wings. Franklin and Joseph, the head angels, review George's life with Clarence.
+							      </p>
+							    </div>
+							  </div>
+							</li>
+						  </ul> 
+						</div>
   				</div>
   			</div>
   		</div>
