--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>anabel espinal</title>
 	<meta charset="utf-8">
-  <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Titillium+Web|Rajdhani" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Titillium+Web|Rajdhani|Economica" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="stylesheet" type="text/css" href="css/animate.css">
@@ -112,43 +112,59 @@
 		  	<h3 class="flow-text">HABILIDADES</h3>
 		    <div class="divider"></div>
 		    <div class="row">
-		    	<div class="col s12 m4 habilidades">
-		    		<div class="hover html circle">
-		    			<div class="circle">
-		    				<h5>HTML</h5>
-		    			</div>
+		    	<div class="col s12 m12 l12">
+		    		<div class="lenguajes">
+		    			<p>HTML</p>
 		    		</div>
+	    	    <div class="progress porcentaje hab">
+				      <div class="determinate porcentaje html" style="width: 70%">
+				      	<div>70%</div>
+				      </div>
+					  </div>
 		    	</div>
-		    	<div class="col s12 m4 habilidades">
-		    		<div class="hover css circle">
-		    			<div class="circle">
-		    				<h5>CSS</h5>
-		    			</div>
+		    	<div class="col s12 m12 l12">
+		    		<div class="lenguajes">
+		    			<p>CSS</p>
 		    		</div>
+		    	  <div class="progress porcentaje hab">
+					    <div class="determinate porcentaje css" style="width: 70%">
+					    	<div>70%</div>
+					    </div>
+						</div>
 		    	</div>
-		    	<div class="col s12 m4 habilidades">
-		    		<div class="hover js circle">
-		    			<div class="circle">
-		    				<h5>JAVA<br>SCRIPT</h5>
-		    			</div>
+		    	<div class="col s12 m12 l12">
+		    		<div class="lenguajes">
+		    			<p>JAVASCRIPT</p>
 		    		</div>
+		    	  <div class="progress porcentaje hab">
+					    <div class="determinate porcentaje js" style="width: 70%">
+					    	<div>70%</div>
+					    </div>
+						</div>
 		    	</div>
 		    </div>
 		    <div class="row">
-		    	<div class="col s12 m6 framework">
-		    		<div class="hover b circle">
-		    			<div class="circle">
-		    				<h5>BOOTSTRAP</h5>
-		    			</div>
+			    <div class="col s12 m12 l12">
+			    	<div class="lenguajes">
+		    			<p>BOOTSTRAP</p>
 		    		</div>
+		    	  <div class="progress porcentaje hab">
+					    <div class="determinate porcentaje b" style="width: 70%">
+					    	<div>70%</div>
+					    </div>
+						</div>
 		    	</div>
-		    	<div class="col s12 m6 framework">
-		    		<div class="hover m circle">
-		    			<div class="circle">
-		    				<h5>MATERIALIZE</h5>
-		    			</div>
+		    	<div class="col s12 m12 l12">
+		    		<div class="lenguajes">
+		    			<p>MATERIALIZE</p>
 		    		</div>
+		    	  <div class="progress porcentaje hab">
+					    <div class="determinate porcentaje m" style="width: 70%">
+					    	<div>70%</div>
+					    </div>
+						</div>
 		    	</div>
+		    </div>
 		  </div>
 	  </article>
 	  <article>
