--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
    		<div class="container center">
  				<div class="row">
  					<div class="col s12">
- 						<h2 class="flow-text">SI QUIERES CONOCER MÁS PROYECTOS VISITA MI GITHUB</h2>
- 						<a href="#">GIT HUB</a>
+ 						<h2 class="flow-text conocer">SI QUIERES CONOCER MÁS PROYECTOS VISITA MI GITHUB</h2>
+ 						<a href="https://github.com/anabelespinal?tab=repositories" target="_blank">GIT HUB</a>
  					</div>
  				</div> 
  		  </div>
