cambiando puntos de mentor

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
   	<article>
   		<div class="heading center valign-wrapper">
   			<div>
-  				<h1 class="center flow-text">"Programar es sólo una chispa de nuestra imaginación"</h1>
+  				<h1 class="center flow-text">"Programar es el inicio de nuestra imaginación"</h1>
   				<h1 class="center flow-text">"Programar es un dibujo donde tu creatividad vuela lejos."</h1>
-  				<h1 class="center flow-text">"Nuestro código sólo es una parte de lo que queremos demostrar."</h1>
+  				<h1 class="center flow-text">"Nuestro código representa una parte de lo que queremos demostrar."</h1>
   				<h1 class="center flow-text">"Detrás de toda página web, hay un programador inspirado."</h1>
-  				<h3 class="right-align flow-text">Anabel Espinal Cruz, front end developer.</h3>
+  				<h3 class="right-align flow-text">Anabel Espinal Cruz - Front End Developer</h3>
 			  	<button type="button"><a href="#">LinkedIn</a></button>
 			  	<button type="button"><a href="#">Curriculum Vitae</a></button>
   			</div>
@@ -73,12 +73,12 @@
 			    	</div>
 			    </div>
 			    <div class="col s12 m9 l7">
-			    	<h5 class="left-align">Mortal</h5>
+			    	<h5 class="center">Yo misma</h5>
 			    	<p class="black-text left-align">
         			Hola, soy Anabel.
             </p>
             <p class="black-text">
-        			Me considero una persona que le encanta estar al aire libre, me gusta leer libros de aventuras y ficción. A mis 19 años me considero una joven en busca de aprender más, creo que todos los días se aprende algo nuevo, y eso me encanta.
+        			Soy una persona que le encanta estar al aire libre y que disfruta leer libros de aventuras y ficción. Me emociona pensar que todos los días podemos aprender algo nuevo, que todos los días crecemos como individuos y que las posibilidades de reinventar nuestro futuro son infinitas!
             </p>
 			    </div>
 	      </div>
@@ -90,13 +90,12 @@
 			    	</div>
 			    </div>
 			    <div class="col s12 m9 l7">
-			    	<h5 class="left-align">Coder</h5>
+			    	<h5 class="center">Coder</h5>
 			    	<p class="black-text left-align">
         		  Hola, soy una coder.
             </p>
             <p class="black-text">
-            	El mundo de la programación web me ha eneñado que no hay límites es lo que uno cree y sueña.
-            	Soy una coder en busca de más. Tálvez programar suena como algo difícil, támbien lo he pensado, pero es como aprender a escribir en papel, si fallas lo importante  es borrarlo rápido y segiur aprendiendo.
+            	He aprendido que en la programación web no existen límites: este mundo es lo que uno crea y sueña. Por eso, soy una coder en busqueda constante de nuevos horizontes. Para muchos, programar les sonará como brujería difícil de dominar -también lo pensé en un inicio-. En realidad, es como aprender a escribir en papel, si fallas lo importante es borrarlo rápido y seguir aprendiendo.
             </p>
 			    </div>
 	      </div>
@@ -104,7 +103,7 @@
 	  </article>
 	  <article>
 		  <div class="parallax-container">
-		    <div class="parallax"><img src="imgs/frase-3.png"></div>
+		    <div class="parallax"><img src="imgs/codigo.jpg"></div>
 		  </div>
 	  </article>
 	  <article id="herramientas">
@@ -118,8 +117,8 @@
 		    		</div>
 	    	    <div class="progress porcentaje hab">
 				      <div class="determinate porcentaje html" style="width: 70%">
-				      	<div>70%</div>
-				      </div>
+				      	<!-- <div>70%</div>
+ -->				      </div>
 					  </div>
 		    	</div>
 		    	<div class="col s12 m12 l12">
@@ -128,8 +127,8 @@
 		    		</div>
 		    	  <div class="progress porcentaje hab">
 					    <div class="determinate porcentaje css" style="width: 70%">
-					    	<div>70%</div>
-					    </div>
+					    	<!-- <div>70%</div>
+ -->					    </div>
 						</div>
 		    	</div>
 		    	<div class="col s12 m12 l12">
@@ -138,8 +137,8 @@
 		    		</div>
 		    	  <div class="progress porcentaje hab">
 					    <div class="determinate porcentaje js" style="width: 70%">
-					    	<div>70%</div>
-					    </div>
+					    	<!-- <div>70%</div>
+ -->					    </div>
 						</div>
 		    	</div>
 		    </div>
@@ -150,8 +149,8 @@
 		    		</div>
 		    	  <div class="progress porcentaje hab">
 					    <div class="determinate porcentaje b" style="width: 70%">
-					    	<div>70%</div>
-					    </div>
+					    	<!-- <div>70%</div>
+ -->					    </div>
 						</div>
 		    	</div>
 		    	<div class="col s12 m12 l12">
@@ -160,8 +159,8 @@
 		    		</div>
 		    	  <div class="progress porcentaje hab">
 					    <div class="determinate porcentaje m" style="width: 70%">
-					    	<div>70%</div>
-					    </div>
+					    	<!-- <div>70%</div>
+ -->					    </div>
 						</div>
 		    	</div>
 		    </div>
@@ -169,7 +168,7 @@
 	  </article>
 	  <article>
 		  <div class="parallax-container">
-		    <div class="parallax"><img src="imgs/frase-3.png"></div>
+		    <div class="parallax"><img src="imgs/codigo.jpg"></div>
 		  </div>
 	  </article>
 		<article id="portafolio">
@@ -223,7 +222,7 @@
    		<div class="container center">
  				<div class="row">
  					<div class="col s12">
- 						<h2 class="flow-text conocer">SI QUIERES CONOCER MÁS PROYECTOS VISITA MI GITHUB</h2>
+ 						<h2 class="flow-text conocer center">ver más...</h2>
  						<a href="https://github.com/anabelespinal?tab=repositories" target="_blank">GIT HUB</a>
  					</div>
  				</div> 
