--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
   				<h1 class="center flow-text">"Nuestro código representa una parte de lo que queremos demostrar."</h1>
   				<h1 class="center flow-text">"Detrás de toda página web, hay un programador inspirado."</h1>
   				<h3 class="right-align flow-text">Anabel Espinal Cruz - Front End Developer</h3>
-			  	<button type="button"><a href="#">LinkedIn</a></button>
+			  	<button type="button"><a href="https://www.linkedin.com/in/anabel-espinal-cruz
+" target="_blank">LinkedIn</a></button>
 			  	<button type="button"><a href="#">Curriculum Vitae</a></button>
   			</div>
    		</div>
@@ -78,7 +79,7 @@
         			Hola, soy Anabel.
             </p>
             <p class="black-text">
-        			Soy una persona que le encanta estar al aire libre y que disfruta leer libros de aventuras y ficción. Me emociona pensar que todos los días podemos aprender algo nuevo, que todos los días crecemos como individuos y que las posibilidades de reinventar nuestro futuro son infinitas!
+        			Soy una persona que le encanta estar al aire libre, que disfruta leer libros de aventuras y ficción. Es emocionante pensar que todos los días se aprende algo nuevo, que las posibilidades de escribir nuestro futuro es tán inmenso y lleno de experiencias nuevas.
             </p>
 			    </div>
 	      </div>
@@ -91,11 +92,11 @@
 			    </div>
 			    <div class="col s12 m9 l7">
 			    	<h5 class="center">Coder</h5>
-			    	<p class="black-text left-align">
+<!-- 			    	<p class="black-text left-align">
         		  Hola, soy una coder.
-            </p>
+            </p> -->
             <p class="black-text">
-            	He aprendido que en la programación web no existen límites: este mundo es lo que uno crea y sueña. Por eso, soy una coder en busqueda constante de nuevos horizontes. Para muchos, programar les sonará como brujería difícil de dominar -también lo pensé en un inicio-. En realidad, es como aprender a escribir en papel, si fallas lo importante es borrarlo rápido y seguir aprendiendo.
+            	He aprendido que en la programación web no existen límites para soñar. Soy una coder en búsqueda constante de nuevos horizontes. Para muchos, programar les sonará cosa de otro mundo, y también lo pensé en un inicio. En realidad, es como aprender a escribir en papel, si fallas lo importante es borrarlo rápido y seguir aprendiendo.
             </p>
 			    </div>
 	      </div>
@@ -234,7 +235,7 @@
 			<div class="row">
 				<div class="col s12 m12 l4">
 					<div>
-					<a href="#">
+					<a href="https://www.linkedin.com/in/anabel-espinal-cruz">
 						<img src="imgs/in.png" alt="link" class="responsive-img">
 					</a>
 					</div>
