--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>anabel espinal</title>
 	<meta charset="utf-8">
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Titillium+Web|Rajdhani|Economica" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -52,14 +52,14 @@
   	<article>
   		<div class="heading center valign-wrapper">
   			<div>
-  				<h1 class="center flow-text">"Programar es el inicio de nuestra imaginación"</h1>
-  				<h1 class="center flow-text">"Programar es un dibujo donde tu creatividad vuela lejos."</h1>
+  				<h1 class="center flow-text">"La programación es un medio donde la creativadad vuela lejos."</h1>
+  				<h1 class="center flow-text">"Detrás de toda página web sorprendente, hay un programador inspirado."</h1>
+  				<h1 class="center flow-text">"La programación es la base para traducir lo que está en nuestra imaginación."</h1>
   				<h1 class="center flow-text">"Nuestro código representa una parte de lo que queremos demostrar."</h1>
-  				<h1 class="center flow-text">"Detrás de toda página web, hay un programador inspirado."</h1>
   				<h3 class="right-align flow-text">Anabel Espinal Cruz - Front End Developer</h3>
 			  	<button type="button"><a href="https://www.linkedin.com/in/anabel-espinal-cruz
 " target="_blank">LinkedIn</a></button>
-			  	<button type="button"><a href="#">Curriculum Vitae</a></button>
+			  	<button type="button"><a target="_blank" href="imgs/cv.pdf">Curriculum Vitae</a></button>
   			</div>
    		</div>
   	</article>
@@ -74,12 +74,12 @@
 			    	</div>
 			    </div>
 			    <div class="col s12 m9 l7">
-			    	<h5 class="center">Yo misma</h5>
+			    	<h5 class="center">Anabel</h5>
 			    	<p class="black-text left-align">
         			Hola, soy Anabel.
             </p>
             <p class="black-text">
-        			Soy una persona que le encanta estar al aire libre, que disfruta leer libros de aventuras y ficción. Es emocionante pensar que todos los días se aprende algo nuevo, que las posibilidades de escribir nuestro futuro es tán inmenso y lleno de experiencias nuevas.
+        			Me encanta estar al aire libre, que disfruta leer libros de aventuras y ficción. Me resulta muy emocionante pensar que todos los días puedo aprender algo nuevo, que las posibilidades de escribir mi futuro es tán inmenso y lleno de experiencias nuevas que están por venir.
             </p>
 			    </div>
 	      </div>
@@ -96,7 +96,7 @@
         		  Hola, soy una coder.
             </p> -->
             <p class="black-text">
-            	He aprendido que en la programación web no existen límites para soñar. Soy una coder en búsqueda constante de nuevos horizontes. Para muchos, programar les sonará cosa de otro mundo, y también lo pensé en un inicio. En realidad, es como aprender a escribir en papel, si fallas lo importante es borrarlo rápido y seguir aprendiendo.
+            	He aprendido que en la programación web los límites para soñar no  existen. Soy una coder que está en búsqueda constante de nuevos horizontes. Como muchos, al iniciar en programación web también pensé que era cosa de otro mundo. Pero, he aprendindo que es como aprender escribir en papel; si fallas, lo importante es corregir rápido y seguir aprendiendo.
             </p>
 			    </div>
 	      </div>
@@ -137,9 +137,26 @@
 		    			<p>JAVASCRIPT</p>
 		    		</div>
 		    	  <div class="progress porcentaje hab">
-					    <div class="determinate porcentaje js" style="width: 70%">
-					    	<!-- <div>70%</div>
- -->					    </div>
+					    <div class="determinate porcentaje js" style="width: 68%">
+				    </div>
+						</div>
+		    	</div>
+		    	<div class="col s12 m12 l12">
+		    		<div class="lenguajes">
+		    			<p>jQUERY</p>
+		    		</div>
+		    	  <div class="progress porcentaje hab">
+					    <div class="determinate porcentaje js" style="width: 55%">
+				    </div>
+						</div>
+		    	</div>
+		    	<div class="col s12 m12 l12">
+		    		<div class="lenguajes">
+		    			<p>SASS</p>
+		    		</div>
+		    	  <div class="progress porcentaje hab">
+					    <div class="determinate porcentaje js" style="width: 55%">
+				    </div>
 						</div>
 		    	</div>
 		    </div>
@@ -149,7 +166,7 @@
 		    			<p>BOOTSTRAP</p>
 		    		</div>
 		    	  <div class="progress porcentaje hab">
-					    <div class="determinate porcentaje b" style="width: 70%">
+					    <div class="determinate porcentaje b" style="width: 65%">
 					    	<!-- <div>70%</div>
  -->					    </div>
 						</div>
@@ -159,7 +176,7 @@
 		    			<p>MATERIALIZE</p>
 		    		</div>
 		    	  <div class="progress porcentaje hab">
-					    <div class="determinate porcentaje m" style="width: 70%">
+					    <div class="determinate porcentaje m" style="width: 66%">
 					    	<!-- <div>70%</div>
  -->					    </div>
 						</div>
@@ -180,9 +197,9 @@
   				<div class="col s12 m6 l6">
   					<div class="uno portafolio">
   						<div>
-  							<a href="https://anabelespinal.github.io/portafolio/" target="_blank">DEMO</a>
+  							<a href="https://anabelespinal.github.io/responsive/" target="_blank">DEMO</a>
   							<br>
-  							<a href="https://github.com/anabelespinal/portafolio" target="_blank">GIT HUB</a>
+  							<a href="https://github.com/anabelespinal/responsive/" target="_blank">GIT HUB</a>
   						</div>
   					</div>
   				</div>
