modificando textos y cv

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+	<link rel="icon" type="ico" href="imgs/logo.ico" />
 	<title>anabel espinal</title>
 	<meta charset="utf-8">
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -57,8 +58,7 @@
   				<h1 class="center flow-text">"La programación es la base para traducir lo que está en nuestra imaginación."</h1>
   				<h1 class="center flow-text">"Nuestro código representa una parte de lo que queremos demostrar."</h1>
   				<h3 class="right-align flow-text">Anabel Espinal Cruz - Front End Developer</h3>
-			  	<button type="button"><a href="https://www.linkedin.com/in/anabel-espinal-cruz
-" target="_blank">LinkedIn</a></button>
+			  	<button type="button"><a href="https://www.linkedin.com/in/anabel-espinal-cruz" target="_blank">LinkedIn</a></button>
 			  	<button type="button"><a target="_blank" href="imgs/cv.pdf">Curriculum Vitae</a></button>
   			</div>
    		</div>
@@ -69,8 +69,8 @@
 	      <div class="divider"></div>
 	      <div class="row">
 			    <div class="col s12 m3 l5">
-			    	<div class="jj circle">
-			    		<img src="imgs/perfil.png" alt="perfil" class="circle responsive-img">
+			    	<div class="jj">
+			    		<img src="imgs/foto-cv.jpg" alt="perfil" class="circle responsive-img">
 			    	</div>
 			    </div>
 			    <div class="col s12 m9 l7">
@@ -78,8 +78,8 @@
 			    	<p class="black-text left-align">
         			Hola, soy Anabel.
             </p>
-            <p class="black-text">
-        			Me encanta estar al aire libre, que disfruta leer libros de aventuras y ficción. Me resulta muy emocionante pensar que todos los días puedo aprender algo nuevo, que las posibilidades de escribir mi futuro es tán inmenso y lleno de experiencias nuevas que están por venir.
+            <p class="black-text parrafo2">
+        			Me encanta estar al aire libre y disfruto leer libros de aventuras y ficción. Me resulta muy emocionante pensar que todos los días puedo aprender algo nuevo, y que las posibilidades de escribir mi futuro son inmensas.
             </p>
 			    </div>
 	      </div>
@@ -92,11 +92,8 @@
 			    </div>
 			    <div class="col s12 m9 l7">
 			    	<h5 class="center">Coder</h5>
-<!-- 			    	<p class="black-text left-align">
-        		  Hola, soy una coder.
-            </p> -->
             <p class="black-text">
-            	He aprendido que en la programación web los límites para soñar no  existen. Soy una coder que está en búsqueda constante de nuevos horizontes. Como muchos, al iniciar en programación web también pensé que era cosa de otro mundo. Pero, he aprendindo que es como aprender escribir en papel; si fallas, lo importante es corregir rápido y seguir aprendiendo.
+            	He aprendido que en la programación web los límites para soñar no  existen. Soy una coder que está en búsqueda constante de nuevos horizontes. Como muchos, al iniciar en programación web también pensé que era cosa de otro mundo. Pero he aprendido que es como escribir en papel; si fallas lo importante es corregir.
             </p>
 			    </div>
 	      </div>
@@ -117,9 +114,7 @@
 		    			<p>HTML</p>
 		    		</div>
 	    	    <div class="progress porcentaje hab">
-				      <div class="determinate porcentaje html" style="width: 70%">
-				      	<!-- <div>70%</div>
- -->				      </div>
+				      <div class="determinate porcentaje html" style="width: 70%"></div>
 					  </div>
 		    	</div>
 		    	<div class="col s12 m12 l12">
@@ -127,9 +122,7 @@
 		    			<p>CSS</p>
 		    		</div>
 		    	  <div class="progress porcentaje hab">
-					    <div class="determinate porcentaje css" style="width: 70%">
-					    	<!-- <div>70%</div>
- -->					    </div>
+					    <div class="determinate porcentaje css" style="width: 70%"></div>
 						</div>
 		    	</div>
 		    	<div class="col s12 m12 l12">
@@ -137,8 +130,7 @@
 		    			<p>JAVASCRIPT</p>
 		    		</div>
 		    	  <div class="progress porcentaje hab">
-					    <div class="determinate porcentaje js" style="width: 68%">
-				    </div>
+					    <div class="determinate porcentaje js" style="width: 68%"></div>
 						</div>
 		    	</div>
 		    	<div class="col s12 m12 l12">
@@ -146,8 +138,7 @@
 		    			<p>jQUERY</p>
 		    		</div>
 		    	  <div class="progress porcentaje hab">
-					    <div class="determinate porcentaje js" style="width: 55%">
-				    </div>
+					    <div class="determinate porcentaje js" style="width: 55%"></div>
 						</div>
 		    	</div>
 		    	<div class="col s12 m12 l12">
@@ -155,8 +146,7 @@
 		    			<p>SASS</p>
 		    		</div>
 		    	  <div class="progress porcentaje hab">
-					    <div class="determinate porcentaje js" style="width: 55%">
-				    </div>
+					    <div class="determinate porcentaje js" style="width: 55%"></div>
 						</div>
 		    	</div>
 		    </div>
@@ -166,9 +156,7 @@
 		    			<p>BOOTSTRAP</p>
 		    		</div>
 		    	  <div class="progress porcentaje hab">
-					    <div class="determinate porcentaje b" style="width: 65%">
-					    	<!-- <div>70%</div>
- -->					    </div>
+					    <div class="determinate porcentaje b" style="width: 65%"></div>
 						</div>
 		    	</div>
 		    	<div class="col s12 m12 l12">
@@ -176,9 +164,7 @@
 		    			<p>MATERIALIZE</p>
 		    		</div>
 		    	  <div class="progress porcentaje hab">
-					    <div class="determinate porcentaje m" style="width: 66%">
-					    	<!-- <div>70%</div>
- -->					    </div>
+					    <div class="determinate porcentaje m" style="width: 66%"></div>
 						</div>
 		    	</div>
 		    </div>
@@ -197,6 +183,7 @@
   				<div class="col s12 m6 l6">
   					<div class="uno portafolio">
   						<div>
+  							<p class="center flow-text descripcion"><strong>RESPONSIVE:</strong> Este proyecto tiene como finalidad el uso de framework para crear un producto destinado a desktop y mobile</p>
   							<a href="https://anabelespinal.github.io/responsive/" target="_blank">DEMO</a>
   							<br>
   							<a href="https://github.com/anabelespinal/responsive/" target="_blank">GIT HUB</a>
@@ -206,6 +193,7 @@
   				<div class="col s12 m6 l6">
   					<div class="uno twitter">
   						<div>
+  							<p class="center flow-text descripcion"><strong>TWITTER:</strong> Este proyecto estuvo realizado en javascript, tiene algunas caracteristicas al twitter original.</p>
   							<a href="https://anabelespinal.github.io/twitter/" target="_blank">DEMO</a>
   							<br>
   							<a href="https://github.com/anabelespinal/twitter" target="_blank">GIT HUB</a>
@@ -217,6 +205,7 @@
   				<div class="col s12 m6 l6">
   					<div class="uno tumblr">
   						<div>
+  							<p class="center flow-text descripcion"><strong>TUMBLR:</strong> Aquí podrás hacer tus publicaciones de una manera más personalizada y separadas por sus caracteristicas.</p>
   							<a href="https://anabelespinal.github.io/tumblr/" target="_blank">DEMO</a>
   							<br>
   							<a href="https://github.com/anabelespinal/tumblr" target="_blank">GIT HUB</a>
@@ -226,6 +215,7 @@
   				<div class="col s12 m6 l6">
   					<div class="uno trello">
   						<div>
+  							<p class="center flow-text descripcion"><strong>TRELLO:</strong> Ahora podrás tener un <em>to do app</em> de una manera mucho más organizada y fácil de utilizar.</p>
   							<a href="https://anabelespinal.github.io/trello/" target="_blank">DEMO</a>
   							<br>
   							<a href="https://github.com/anabelespinal/trello" target="_blank">GIT HUB</a>
