--- a/index.html
+++ b/index.html
@@ -223,6 +223,22 @@
   					</div>
   				</div>
   			</div>
+  			<div class="row">
+  				<div class="col s12 m12 l12">
+  					<div class="uno musica">
+  						<div>
+  							<p class="center flow-text descripcion"><strong>MUSIC DETECTION:</strong> Aquí podrás encontrar toda tu música variada.
+  								<br>
+  							Colaboradora: Paola Ortiz de Zevallos.
+  							</p>
+
+  							<a href="https://paolaozv.github.io/music-detection/public/" target="_blank">DEMO</a>
+  							<br>
+  							<a href="https://github.com/paolaozv/music-detection" target="_blank">GIT HUB</a>
+  						</div>
+  					</div>
+  				</div>
+  			</div>
   		</div>
   	</article>
   	</article>
