--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 				<div class="col s12 m12 l4">
 					<div>
 						<img src="imgs/gmail.png" alt="gmail" class="responsive-img">
-						<div>yorlanaespinal@gmail.com</div>
+						<div class="email"><a href="mailto:yorlanaespinal@gmail.com">yorlanaespinal@gmail.com</a></div>
 					</div>
 				</div>
 			</div>
