--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="icon" type="ico" href="imgs/logo.ico" />
 	<title>anabel espinal</title>
 	<meta charset="utf-8">
-  <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Titillium+Web|Rajdhani|Economica" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -93,7 +93,7 @@
 			    <div class="col s12 m9 l7">
 			    	<h5 class="center">Coder</h5>
             <p class="black-text">
-            	He aprendido que en la programación web los límites para soñar no  existen. Soy una coder que está en búsqueda constante de nuevos horizontes. Como muchos, al iniciar en programación web también pensé que era cosa de otro mundo. Pero he aprendido que es como escribir en papel; si fallas lo importante es corregir.
+            	He aprendido que en la programación web los límites para soñar no  existen. Soy una coder que está en búsqueda constante de nuevos horizontes. Como muchos, al iniciar en programación web también pensé que era cosa de otro mundo. Pero he aprendido que es como escribir en papel; lo importante es borrar y volver a intentarlo.
             </p>
 			    </div>
 	      </div>
